# pwiz-ai

./: .gitignore  CLAUDE.md  CRITICAL-RULES.md  MEMORY.md  README.md  STYLEGUIDE.md  TESTING.md  TOC.md  WORKFLOW.md  root-CLAUDE.md
claude/: settings-defaults.local.json  settings.json
docs/: README.md  Verify-LabKeyEnvironment.ps1  ai-repository-strategy.md  ai-submodule-strategy.md  architecture-data-model.md  architecture-error-handling.md  architecture-files.md  architecture-reporting-layer.md  build-and-test-guide.md  claude-commands.md  daily-report-guide.md  debugging-principles.md  developer-setup-guide.md  documentation-maintenance.md  labkey-dev-setup.md  leak-debugging-guide.md  native-file-dialog-automation.md  new-machine-bootstrap.md  new-machine-setup.md  new-machine-windows-install.md  osprey-crossimpl-validation-guide.md  osprey-development-guide.md  project-context.md  release-cycle-guide.md  release-guide.md  scheduled-tasks-guide.md  screenshot-update-workflow.md  skylinetester-debugging-guide.md  skylinetester-guide.md  style-guide.md  testing-patterns.md  translation-guide.md  tutorial-workflow-guide.md  validation-cycle-principles.md  version-control-guide.md  webinar-to-tutorial-draft-guide.md  workflow-guide.md
mcp/: README.md
mcp/MailChimpMcp/: .env.example  README.md  pyproject.toml  server.py
mcp/MailChimpMcp/tools/: __init__.py  common.py  discovery.py
mcp/StatusMcp/: README.md  pyproject.toml  server.py
scripts/: Archive-CompletedTodos.ps1  Archive-DailyReports.ps1  Clean-TmpFiles.ps1  Generate-TOC.ps1  Install-DotMemory.ps1  (+10 more)
(+902 files in other folders)
